[project]
name = "backend"
version = "0.1.0"
description = "backend using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
    "fastapi[all]>=0.116.1",
]

[project.scripts]
backend = "backend.main:_start_crewai"
run_crew = "backend.main:_start_crewai"
train = "backend.main:train"
replay = "backend.main:replay"
test = "backend.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
